
syntax = "proto3";

// I want to use grpc to generate the individual classes
package stock_trading;
option java_multiple_files=true;
option java_package="com.skynet.grpc_server";
option java_outer_classname="StockTradingProto";

service StockTradingService{

  // Unary - RPC -> get current stock price
  rpc getStockPrice(StockRequest) returns (StockResponse);

  // Server Streaming - RPC
  rpc subscribeStockPrice(StockRequest) returns (stream StockResponse);

  // Client Streaming - RPC -> place multiple stock orders
  rpc bulkStockOrder(stream StockOrder) returns (OrderSummary);

}

// The number at the end is the symbol
message StockRequest{
  string stock_symbol=1;
}

message StockResponse{
  string stock_symbol=1;
  double price=2;
  string timestamp=3;
}

message StockOrder {
  string order_id=1;
  string stock_symbol=2;
  int32 quantity=3;
  double price=4;
  string order_type=5; // BUY or SELL
}

message OrderSummary {
  int32 total_orders=1;
  double total_amount=2;
  int32 success_count=3;
}